
syntax = "proto3";

package DdServerGrpc;

service MetricsService {
  // Streams server metrics (CPU, RAM, Disk, etc.)
  rpc StreamMetrics (MetricsRequest) returns (stream MetricsResponse);
}

message MetricsRequest {
  int32 interval_seconds = 1;
}

message MetricsResponse {
  double total_cpu = 1;
  double used_cpu = 2;
  double total_ram = 3;
  double used_ram = 4;
  double total_disk = 5;
  double used_disk = 6;
  double uptime = 7;
  string health_check = 8;
  int64 timestamp = 9;
}

service ServiceControlManager {
  rpc StartService (ServiceRequest) returns (ServiceResponse);
  rpc StopService (ServiceRequest) returns (ServiceResponse);
  rpc RestartService (ServiceRequest) returns (ServiceResponse);
  rpc GetServiceStatus (ServiceRequest) returns (ServiceStatusResponse);
}

message ServiceRequest {
  string service_name = 1;
}

message ServiceResponse {
  bool success = 1;
  string message = 2;
}

message ServiceStatusResponse {
  string service_name = 1;
  string status = 2;
  string message = 3;
}
